--- a/nav/nav.css
+++ b/nav/nav.css
@@ -72,7 +72,7 @@ nav img{
     box-shadow: 0px 0px 0px 0px;
 }
 .datatable .thedata{
-    
+    background-image: url("https://scontent.fsgn5-2.fna.fbcdn.net/v/t39.30808-6/360150356_257769050337568_6643207250613385970_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=730e14&_nc_ohc=3xM2jwroo-QAX-w1q25&_nc_ht=scontent.fsgn5-2.fna&oh=00_AfB6Bh-6Q6wJlzA--rrAvUrc5WTVya7Fbt3L_kCUaKItlw&oe=64CE4D4D");
     background-size: 110% 150%;
     background-repeat: no-repeat;
     flex:6
