--- a/nav/nav.css
+++ b/nav/nav.css
@@ -72,6 +72,7 @@ nav img{
     box-shadow: 0px 0px 0px 0px;
 }
 .datatable .thedata{
+    background-color:blue;
     background-image: url('');
     background-size: 110% 150%;
     background-repeat: no-repeat;
