--- a/data/data.css
+++ b/data/data.css
@@ -7,8 +7,7 @@
 }
 .module-month{
     height: 400px;
-    width: 400px;
-    border: solid 1px;
+    width: 35%;
     background-color: rgba(255, 255, 255, 0.5);
     opacity: 0.8;
     display: flex;
@@ -18,6 +17,13 @@
 }
 .input-month{
     margin:2px;
+}
+.module-day{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
 }
 .data-month{
     border: solid 1px;
@@ -34,4 +40,35 @@
     width: 200px;
     margin-top: 3px;
     border: solid 1px;
+}
+/* output */
+.output-month{
+    height: 25px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.output-month>.day_,.month_{
+    margin-left: 10px;
+    border: solid 1px;
+    width: 50px;
+    height: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+
+
+/*input new value */
+.add-month{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.add-month > input{
+    width:30%;
 }
